objects/partdir_mp__App_Comment__c.object
<CustomObject>
    <fields>
        <fullName>partdir_mp__Comment_Body__c</fullName>
        <label>Comment Body</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>partdir_mp__Partner_App__c</fullName>
        <label>Partner App</label>
        <referenceTo>partdir_mp__Partner_App__c</referenceTo>
        <relationshipLabel>App Comments</relationshipLabel>
        <relationshipName>App_Comments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>partdir_mp__Rating__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Rating</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>App Comment</label>
    <nameField>
        <displayFormat>JC-{00000}</displayFormat>
        <label>App Comment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>App Comments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>partdir_mp__Valid_rating</fullName>
        <active>true</active>
        <errorConditionFormula>partdir_mp__Rating__c &lt; 1 ||  partdir_mp__Rating__c &gt; 5</errorConditionFormula>
        <errorDisplayField>partdir_mp__Rating__c</errorDisplayField>
        <errorMessage>Score must be at least 1 and at most 5</errorMessage>
    </validationRules>
</CustomObject>